# cmake-autocode-demo

./: CMakeLists.txt  main.cpp
autocode_user/: CMakeLists.txt
autocoder/: __init__.py
